# MO443_JR

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
experiments/activity_001/: run_analysis.py
notebooks/: Vectorization_Broadcasting _Tutorial.ipynb
src/activity_001/: analysis.py  binarization_threshold.py  bitplanes.py  brightness_adjustment.py  color_change.py  combination_images.py  image_filtering.py  mosaic.py  pencil_sketch.py  quantification.py  rotation.py  scaling.py  various_transformations.py
src/utilities/: benchmarking.py  filter.py  graphics.py  load_save.py  logging_settings.py
