[project]
name = "MO443"
version = "1.0.0"
requires-python = ">=3.12"
readme = "README.md"
authors = [
  {name = "Juan Jose Rodriguez", email = "rodriguezjuan001@outlook.com"}
]
license = {file = "LICENSE"}
keywords = ["data-science", "machine-learning"]
dependencies = [
    "numpy>=2.0.2", 
    "pandas>=2.2.2",
    "scipy>=1.16.3",
    "scikit-learn>=1.6.1",
    "scikit-image >=0.25.0",
    "matplotlib>=3.10.0",
    "opencv-python-headless>=4.13.0.92"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.5",
    "ipykernel>=7.2.0"
]

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = ["E", "F", "I", "B", "UP", "NPY"] # Incluye reglas para NumPy 2.x
lint.ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]